Fix horizontal scroll on mobile devices due to missing word break

--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -11,6 +11,8 @@
 
 .blog-post-container,
 .blog-content {
+  word-break: break-word;
+
   &:not(:last-child) {
     margin-bottom: 50px;
   }
