--- a/_sass/code-highlight.scss
+++ b/_sass/code-highlight.scss
@@ -151,3 +151,6 @@
 .highlight .il {
   color: #0000ff;
 } /* Literal.Number.Integer.Long */
+pre code {
+  white-space: break-spaces;
+}
